fix: change wrong property to letter-spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ h2 {
     padding: 8rem 2rem 4rem 2rem;
     text-align: center;
     font-size: 2.5rem;
-    font-stretch: -1;
+    letter-spacing: -1px;
 }
 
 a {
